[package]
name = "libsignal-client-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Patrick Daniel <pdaniel.koe@gmail.com>"]
description = "libsignal-client-wasm"
repository = "https://github.com/pdanielkoe/libsignal-client-wasm"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
