[package]
name = "libsignal-client-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Patrick Daniel <pdaniel.koe@gmail.com>"]
description = "libsignal-client-wasm"
repository = "https://github.com/pdanielkoe/libsignal-client-wasm"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }

[workspace]
members = [
    "rust/crypto",
    "rust/device-transfer",
    "rust/hsm-enclave",
    "rust/poksho",
    "rust/protocol",
    "rust/zkgroup",
    "rust/bridge/ffi",
    "rust/bridge/jni",
    "rust/bridge/node",
]
default-members = [
    "rust/crypto",
    "rust/device-transfer",
    "rust/poksho",
    "rust/protocol",
    "rust/zkgroup",
]
resolver = "2" # so that our dev-dependency features don't leak into products

[patch.crates-io]
# Use our fork of curve25519-dalek for eventual zkgroup support.
curve25519-dalek = { git = 'https://github.com/signalapp/curve25519-dalek', branch = '3.0.0-lizard2' }

# Use a num-bigint-dig that supports -Zbuild-std.
num-bigint-dig = { git = 'https://github.com/dignifiedquire/num-bigint', rev = '56576b592fea6341b7e1711a1629e4cc1bfc419c' }

[profile.dev.package.num-bigint-dig]
opt-level = 2 # too slow otherwise!
